src/objects/Apttus_Config2__PriceListItem__c.object
<CustomObject>
    <description>Represents a product entry in a price list.</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ARAccountRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the A/R account rule</description>
        <inlineHelpText>ID of the A/R account rule</inlineHelpText>
        <label>A/R Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__GLAccountMapRule__c.Apttus_Config2__GLAccountType__c</field>
                <operation>equals</operation>
                <value>Accounts Receivable Account</value>
            </filterItems>
            <infoMessage>Please select an A/R Account Rule</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__GLAccountMapRule__c</referenceTo>
        <relationshipLabel>Price List Items  (A/R Account)</relationshipLabel>
        <relationshipName>PriceListItemsAR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the price list item is active. Inactive price list items are ignored.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllocateGroupAdjustment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether group adjustments should be allocated to the product</description>
        <label>Allocate Group Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowManualAdjustment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether manual price adjustments are allowed for the product</description>
        <label>Allow Manual Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowPriceRampOverlap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether overlapping price ramps are allowed</description>
        <inlineHelpText>Indicates whether overlapping price ramps are allowed</inlineHelpText>
        <label>Allow Price Ramp Overlap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowProration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether proration is allowed for the product.</description>
        <label>Allow Proration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoCascadeQuantity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the quantity is auto cascaded from the bundle product to the options. Only applicable for recurring and usage price types</description>
        <inlineHelpText>Indicates whether the quantity is auto cascaded from the bundle product to the options. Only applicable for recurring and usage price types</inlineHelpText>
        <label>Auto Cascade Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoCascadeSellingTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the selling term is auto cascaded from the bundle product to the options. Only applicable for recurring and usage price types.</description>
        <inlineHelpText>Indicates whether the selling term is auto cascaded from the bundle product to the options. Only applicable for recurring and usage price types.</inlineHelpText>
        <label>Auto Cascade Selling Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the recurring item would auto renew at end of term</description>
        <inlineHelpText>Indicates whether the recurring item would auto renew at end of term</inlineHelpText>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRenewalTerm__c</fullName>
        <description>The auto renewal term</description>
        <inlineHelpText>The auto renewal term</inlineHelpText>
        <label>Auto Renewal Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRenewalType__c</fullName>
        <description>The auto renewal type</description>
        <inlineHelpText>The auto renewal type</inlineHelpText>
        <label>Auto Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingFrequency__c</fullName>
        <description>The billing frequency associated with the recurring or usage price</description>
        <inlineHelpText>The billing frequency associated with the recurring or usage price</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingRule__c</fullName>
        <description>The billing rule associated with the price item</description>
        <inlineHelpText>The billing rule associated with the price item</inlineHelpText>
        <label>Billing Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill In Advance</fullName>
                </value>
                <value>
                    <fullName>Bill In Arrears</fullName>
                </value>
                <value>
                    <fullName>Bill on Ready for Billing Date</fullName>
                </value>
                <value>
                    <fullName>Milestone Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChargeType__c</fullName>
        <description>The charge type associated with the price</description>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Price</fullName>
                    <label>Product Price</label>
                </value>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
                <value>
                    <fullName>Installation Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance Fee</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>Maintenance for Y2 and Beyond</fullName>
                </value>
                <value>
                    <fullName>Year 1 Maintenance</fullName>
                </value>
                <value>
                    <fullName>SRS</fullName>
                </value>
                <value>
                    <fullName>SSP</fullName>
                </value>
                <value>
                    <fullName>Maintenance for Y2 &amp; Beyond</fullName>
                </value>
                <value>
                    <fullName>Maintenance Under Warranty</fullName>
                </value>
                <value>
                    <fullName>Maintenance Beyond Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CommittedQuantity__c</fullName>
        <description>The Quantity from Quote/Contract line items that was committed during price negotiation</description>
        <inlineHelpText>The Quantity from Quote/Contract line items that was committed during price negotiation</inlineHelpText>
        <label>Committed Quantity (Deprecated)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContractItemNumber__c</fullName>
        <description>The Unique identifier for the item number as referred to in the quote or contract</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The Unique identifier for the item number as referred to in the quote or contract</inlineHelpText>
        <label>Contract Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContractNumber__c</fullName>
        <description>The contract number associated with the price item</description>
        <formula>Apttus_Config2__PriceListId__r.Apttus_Config2__ContractNumber__c</formula>
        <inlineHelpText>The contract number associated with the price item</inlineHelpText>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContractPrice__c</fullName>
        <description>The contract price for the product.</description>
        <inlineHelpText>The contract price for the product.</inlineHelpText>
        <label>Contract Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Cost__c</fullName>
        <description>The cost for the product</description>
        <label>Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Criteria__c</fullName>
        <description>The item criteria specification</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Charge Type Criteria</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DRAccountRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the deferred revenue account rule</description>
        <inlineHelpText>ID of the deferred revenue account rule</inlineHelpText>
        <label>Deferred Revenue Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__GLAccountMapRule__c.Apttus_Config2__GLAccountType__c</field>
                <operation>equals</operation>
                <value>Deferred Revenue Account</value>
            </filterItems>
            <infoMessage>Please select a Deferred Revenue Account Rule</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__GLAccountMapRule__c</referenceTo>
        <relationshipLabel>Price List Items (Deferred Revenue Account)</relationshipLabel>
        <relationshipName>PriceListItemsDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultPriceDatasource__c</fullName>
        <description>The data source which provides the default value for the base price.Only applicable when the default price from is available.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The data source which provides the default value for the base price.Only applicable when the default price from is available.</inlineHelpText>
        <label>Default Price Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultPriceFrom__c</fullName>
        <description>The related object to default the base price from. If the related object is not available, the list price will be used.</description>
        <inlineHelpText>The related object to default the base price from. If the related object is not available, the list price will be used.</inlineHelpText>
        <label>Default Price From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Attribute</fullName>
                </value>
                <value>
                    <fullName>Advanced Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultQuantityDatasource__c</fullName>
        <description>The data source which provides the default value for the quantity.Only applicable when the default quantity from is available.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The data source which provides the default value for the quantity.Only applicable when the default quantity from is available.</inlineHelpText>
        <label>Default Quantity Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultQuantityFrom__c</fullName>
        <description>The related object to default the quantity from. If the related object is not available, the quantity default value will be used.</description>
        <inlineHelpText>The related object to default the quantity from. If the related object is not available, the quantity default value will be used.</inlineHelpText>
        <label>Default Quantity From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Configuration</fullName>
                </value>
                <value>
                    <fullName>Product Attribute</fullName>
                </value>
                <value>
                    <fullName>Advanced Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultQuantity__c</fullName>
        <description>The default quantity for the product or service</description>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultSellingTerm__c</fullName>
        <description>The default selling term for the product or service</description>
        <label>Default Selling Term</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description of the price list.item</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisableAssetIntegration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether asset integration is disabled for the product or service</description>
        <inlineHelpText>Indicates whether asset integration is disabled for the product or service</inlineHelpText>
        <label>Disable Asset Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisableCostModel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether cost model is disabled for the product or service</description>
        <inlineHelpText>Indicates whether cost model is disabled for the product or service</inlineHelpText>
        <label>Disable Cost Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisableSyncWithOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether synchronization of the product/service with the opportunity is disabled.</description>
        <inlineHelpText>Indicates whether synchronization of the product/service with the opportunity is disabled.</inlineHelpText>
        <label>Disable Sync With Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The price effective date. The price becomes effective on this date and time.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableAutoRampCreation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether price ramps are auto created based on ramp frequency and enforces bundle and option dates.</description>
        <inlineHelpText>Indicates whether price ramps are auto created based on ramp frequency and enforces bundle and option dates.</inlineHelpText>
        <label>Enable Auto Ramp Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableCommitment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether volumeor revenue commitment is enabled for the product or option</description>
        <inlineHelpText>Indicates whether volumeor revenue commitment is enabled for the product or option</inlineHelpText>
        <label>Enable Commitment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnablePriceRamp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether price ramp is enabled for the product or option</description>
        <inlineHelpText>Indicates whether price ramp is enabled for the product or option</inlineHelpText>
        <label>Enable Price Ramp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The price expiration date. The price becomes ineffective after this date and time.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Frequency__c</fullName>
        <description>The frequency associated with the recurring or usage price</description>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__PriceType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasCriteria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price item has criteria associated with the charge type</description>
        <inlineHelpText>Indicates whether the price item has criteria associated with the charge type</inlineHelpText>
        <label>Has Charge Type Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsQuantityReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the quantity is modifiable for the product or option</description>
        <inlineHelpText>Indicates whether the quantity is modifiable for the product or option</inlineHelpText>
        <label>Is Quantity Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsSellingTermReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the selling term is modifiable for the recurring product or option</description>
        <inlineHelpText>Indicates whether the selling term is modifiable for the recurring product or option</inlineHelpText>
        <label>Is Selling Term Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsUsageTierModifiable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the usage price tier is modifiable for the product or option</description>
        <inlineHelpText>Indicates whether the usage price tier is modifiable for the product or option</inlineHelpText>
        <label>Is Usage Tier Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ListPrice__c</fullName>
        <description>The list price for the product</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxPrice__c</fullName>
        <description>The maximum price or net adjustment % for the line item.</description>
        <label>Max Price/Net Adj %</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxUsageQuantity__c</fullName>
        <description>The maximum usage quantity. Only applicable to usage items.</description>
        <inlineHelpText>The maximum usage quantity. Only applicable to usage items.</inlineHelpText>
        <label>Max Usage Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MinMaxPriceAppliesTo__c</fullName>
        <description>Indicates the price field the min/max price rule should be applied to</description>
        <label>Min/Max Price Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base Price</fullName>
                </value>
                <value>
                    <fullName>Base Extended Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MinPrice__c</fullName>
        <description>The minimum price or net adjustment % for the line item</description>
        <label>Min Price/Net Adj %</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MinUsageQuantity__c</fullName>
        <description>The minimum usage quantity. Only applicable to usage items.</description>
        <inlineHelpText>The minimum usage quantity. Only applicable to usage items.</inlineHelpText>
        <label>Min Usage Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NumberOfMatrices__c</fullName>
        <description>Indicates the number of price matrices associated with the price list item</description>
        <label>Number Of Matrices</label>
        <summaryForeignKey>Apttus_Config2__PriceMatrix__c.Apttus_Config2__PriceListItemId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceIncludedInBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the option price is included in the bundle. Only applicable to product options.</description>
        <label>Price Included In Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListId__c</fullName>
        <description>ID of the price list associated with the product</description>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceMethod__c</fullName>
        <description>The price method</description>
        <label>Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Unit</fullName>
                    <default>true</default>
                    <label>Per Unit</label>
                </value>
                <value>
                    <fullName>Flat Price</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Related Price</fullName>
                </value>
                <value>
                    <fullName>Tiered Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceType__c</fullName>
        <description>The price type</description>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                    <default>true</default>
                    <label>One Time</label>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
                <value>
                    <fullName>Included Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceUom__c</fullName>
        <description>The pricing unit of measure for the product</description>
        <label>Price Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductActive__c</fullName>
        <description>Indicates whether the product is active</description>
        <formula>Apttus_Config2__ProductId__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the product is active</inlineHelpText>
        <label>Product Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCode__c</fullName>
        <description>The product code</description>
        <formula>Apttus_Config2__ProductId__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The product code</inlineHelpText>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductDescription__c</fullName>
        <description>The product description</description>
        <formula>Apttus_Config2__ProductId__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The product description</inlineHelpText>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamily__c</fullName>
        <description>The product family</description>
        <formula>TEXT(Apttus_Config2__ProductId__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The product family</inlineHelpText>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product associated with the price list</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Price Lists</relationshipLabel>
        <relationshipName>PriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductName__c</fullName>
        <description>The product name</description>
        <formula>Apttus_Config2__ProductId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The product name</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RRAccountRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the recognized revenue account rule</description>
        <inlineHelpText>ID of the recognized revenue account rule</inlineHelpText>
        <label>Recognized Revenue Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__GLAccountMapRule__c.Apttus_Config2__GLAccountType__c</field>
                <operation>equals</operation>
                <value>Recognized Revenue Account</value>
            </filterItems>
            <infoMessage>Please select a Recognized Revenue Account Rule</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__GLAccountMapRule__c</referenceTo>
        <relationshipLabel>Price List Items (Recognized Revenue Account)</relationshipLabel>
        <relationshipName>PriceListItemsRR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedAdjustmentAmountSourceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The source holding the related adjustment amount. If the adjustment source does not hold a value, the value would default to the related adjustment amount.</description>
        <inlineHelpText>The source holding the related adjustment amount. If the adjustment source does not hold a value, the value would default to the related adjustment amount.</inlineHelpText>
        <label>Related Adjustment Amount Source</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__FormulaField__c.Apttus_Config2__BusinessObject__c</field>
                <operation>equals</operation>
                <value>Apttus_Config2__LineItem__c</value>
            </filterItems>
            <infoMessage>Please select a field that holds the related adjustment amount</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__FormulaField__c</referenceTo>
        <relationshipLabel>Price List Items</relationshipLabel>
        <relationshipName>PriceListItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedAdjustmentAmount__c</fullName>
        <inlineHelpText>The related item price adjustment amount.</inlineHelpText>
        <label>Related Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
</CustomObject>